# SyphonJitter

./: .gitignore  .gitmodules  CMakeLists.txt
Client/jit.gl.syphonclient/jit.gl.syphonclient/: jit.gl.syphonclient.m
Client/jit.gl.syphonclient/jit.gl.syphonclient.xcodeproj/: project.pbxproj
Client/jit.gl.syphonclient/jit.gl.syphonclient.xcodeproj/xcshareddata/xcschemes/: jit.gl.syphonclient.xcscheme
Jitter-Common/: maxmspsdk.xcconfig
Package/: package-info.json
Server/jit.gl.syphonserver/jit.gl.syphonserver/: jit.gl.syphonserver.m  max.jit.gl.syphonserver.c
Server/jit.gl.syphonserver/jit.gl.syphonserver.xcodeproj/: project.pbxproj
Shared/: SyphonNameboundClient.h
Syphon/: package-info.json
Syphon/extras/: Syphon.maxpat  syphon-launcher.maxpat
Syphon/help/: jit.gl.syphonclient.maxhelp  jit.gl.syphonserver.maxhelp
SyphonJitter.xcworkspace/: contents.xcworkspacedata
jit.gl.syphonclient/: CMakeLists.txt  jit.gl.syphonclient.m  max.jit.gl.syphonclient.m
jit.gl.syphonserver/: CMakeLists.txt  jit.gl.syphonserver.m
projects/: syphon-posttarget.cmake
projects/jit.gl.syphonclient/: CMakeLists.txt  jit.gl.syphonclient.m  max.jit.gl.syphonclient.m
projects/jit.gl.syphonserver/: CMakeLists.txt  jit.gl.syphonserver.m  max.jit.gl.syphonserver.c
script/: max-posttarget.cmake  max-pretarget.cmake
